--- a/PodFile
+++ b/PodFile
@@ -14,6 +14,14 @@ target :Uploader, :exclusive => true do
   pod 'Bolts'
   pod 'Parse'
   pod 'SVProgressHUD'
+  pod 'SDWebImage'
+  pod 'AMScrollingNavbar'
+  # pod 'FastImageCache'
+  # pod 'Lockbox'
+  # pod 'JDStatusBarNotification'
+  # pod 'CWStatusBarNotification'
+  # pod 'GVUserDefaults'
+  # pod 'UICKeyChainStore'
   # pod 'GPUImage'
   # pod 'Appirater'
   # pod 'CrashlyticsFramework' # http://qiita.com/asakahara/items/cfa404267ed60fb21927
