--- a/PodFile
+++ b/PodFile
@@ -14,6 +14,8 @@ def import
   pod 'Bolts'
   pod 'Parse'
   pod 'SVProgressHUD'
+  pod 'Toast'
+  pod 'DACircularProgress'
   # pod 'SDWebImage'
   pod 'AMScrollingNavbar'
   # pod 'FastImageCache'
